fix(sonar): resolve CRITICAL string duplication and test issues
Resolved:
- S1192: Define constants instead of duplicating string literals
  * MultiIssuerJWTTokenAuthenticator: 6 duplicated strings
  * ConfigurationManager: 3 duplicated strings
- S6204: Replace Stream.collect(Collectors.toList()) with Stream.toList()
- S131: Add default case to switch statement
- S6205, S1871: Remove redundant blocks and duplicate switch cases
- S2925: Remove Thread.sleep() from tests, use timestamp manipulation
- S1854, S1481: Remove useless variable assignment
- S1130: Remove unnecessary IOException declaration

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>